--- a/equipment/index.html
+++ b/equipment/index.html
@@ -68,7 +68,7 @@
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/first_session">第一次聚會</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/fronts">前置</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/the_world">世界</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/advanced_delving">進階</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/advanced_delving">深入鑽研</a></li>
      </ul>
    </li>
    <li class="dropdown">
@@ -192,9 +192,9 @@
 <p class="Item">治療藥水	<span class="Tags">50 金幣, 0 重量</span></p>
 <p class="ItemDescription">當你喝下一整瓶治療藥水，你可以治療自己 10點傷害或移除一項異常狀態，由你決定。</p>
 <p class="Item">一桶矮人烈酒	<span class="Tags">10 金幣, 4 重量</span></p>
-<p class="ItemDescription">When you open a keg of dwarven stout and let everyone drink freely, take +1 to your Carouse roll. If you drink a whole keg yourself, you are very, very drunk.</p>
+<p class="ItemDescription">當你打開一桶矮人烈酒並任由在場眾人享用，則你在<b>歡宴暢飲</b>的擲骰獲得+1。若你自己喝掉整桶烈酒，那麼你會喝得非常、非常醉。</p>
 <p class="Item">一袋書	<span class="Tags">5 使用次數, 10 金幣, 2 重量</span></p>
-<p class="ItemDescription">當這袋書中剛好有本書的主題與你憶述見聞的內容有關，你可以查閱那本書，消耗 1次使用次數，並讓你的擲骰獲得 +1。</p>
+<p class="ItemDescription">當這袋書中剛好有本書的主題與你<b>憶述見聞</b>的內容有關，你可以查閱那本書，消耗 1次使用次數，並讓你的擲骰獲得 +1。</p>
 <p class="Item">解毒劑	<span class="Tags">10 金幣, 0 重量</span></p>
 <p class="ItemDescription">當你喝下解毒劑，你可以解除一種正在影響你的毒素。</p>
 <p class="Item">地城口糧	<span class="Tags">食物, 5 使用次數, 3 金幣, 1 重量</span></p>
@@ -206,7 +206,7 @@
 <p class="Item">精靈麵包	<span class="Tags">食物, 7 使用次數, 10 金幣, 1 重量</span></p>
 <p class="ItemDescription">只有精靈最親密的朋友能夠享用這難得的美食。</p>
 <p class="Item">半身人菸草	<span class="Tags">6 使用次數, 5 金幣, 0 重量</span></p>
-<p class="ItemDescription">When you share halfling pipeleaf with someone, expend two uses and take +1 forward to parley with them.</p>
+<p class="ItemDescription">當你把半身人菸草分享給別人時，消耗 2次使用次數，並在對他們進行<b>談判</b>的擲骰中獲得下次+1。</p>
 <hr/>
 <h2>毒藥 (Poisons)</h2>
 <p class="Item">塔吉特之油	<span class="Tags">危險, 內服, 15 金幣, 0 重量</span></p>
