--- a/monsters/overview/index.html
+++ b/monsters/overview/index.html
@@ -68,7 +68,7 @@
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/first_session">第一次聚會</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/fronts">前置</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/the_world">世界</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/advanced_delving">進階</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/advanced_delving">深入鑽研</a></li>
      </ul>
    </li>
    <li class="dropdown">
@@ -136,12 +136,12 @@
 <p>If a creature is of such a scale far beyond the players, or if it just doesn’t put up a physical fight, don’t assign it HP, damage, or armor. You can still use the monster creation rules to give it tags. The core of a stat-less monster is its instinct and moves; you can have it make its moves and act according to its instinct even without numeric stats.</p>
 <hr/>
 <h2>怪物標籤 (Monster Tags)</h2>
-<p class="NoIndent"><tag>魔法 (Magical)</tag>: 牠徹頭徹尾都是與生俱來的魔法。</p>
+<p class="NoIndent"><tag>魔法 (Magical)</tag>: 牠全身上下都是與生俱來的魔法。</p>
 <p class="NoIndent"><tag>狡猾 (Devious)</tag>: 牠最主要的威脅並不在於單純的戰鬥衝突。</p>
 <p class="NoIndent"><tag>不定型 (Amorphous)</tag>: 牠的身體構造和器官相當怪異而不自然。</p>
 <p class="NoIndent"><tag>組織 (Organized)</tag>: 牠有著一個能幫助牠求生的族群結構。擊敗其中一隻可能會招致眾怒。單一個體也可能會發出警報。</p>
 <p class="NoIndent"><tag>聰穎 (Intelligent)</tag>: 牠相當聰明，某些個體甚至還能夠學會其他技能。GM可以透過追加標籤來調整這類怪物，反映出特定的訓練，例如法師或戰士。</p>
-<p class="NoIndent"><tag>囤財者 (Hoarder)</tag>: 牠幾乎必定擁有財寶。</p>
+<p class="NoIndent"><tag>囤財者 (Hoarder)</tag>: 牠幾乎肯定擁有著財寶。</p>
 <p class="NoIndent"><tag>隱匿 (Stealthy)</tag>: 牠可以避免被察覺，並喜好以突襲的方式展開攻擊。</p>
 <p class="NoIndent"><tag>駭人 (Terrifying)</tag>: 牠的存在與長相會引發恐懼。</p>
 <p class="NoIndent"><tag>謹慎 (Cautious)</tag>: 牠重視生存更勝過侵攻。</p>
