--- a/moves/index.html
+++ b/moves/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>基本動作 | 地城世界 HTML SRD</title>
+  <title>動作 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -68,7 +68,7 @@
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/first_session">第一次聚會</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/fronts">前置</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/the_world">世界</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/advanced_delving">進階</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/advanced_delving">深入鑽研</a></li>
      </ul>
    </li>
    <li class="dropdown">
@@ -110,13 +110,13 @@
        <div class="row">
           <div class="col-md-8 col-md-offset-1">
              <h1>基本動作</h1>
-<div class="Move"><h2 class="BasicMoveName">砍劈(Hack and Slash)</h2>
+<div class="Move"><h2 class="BasicMoveName">砍劈 (Hack and Slash)</h2>
 <p class="NoIndent">
 	當你<strong>以近戰肉搏攻擊敵人</strong>時，擲+力量。<br/>
 	✴擲出10+時，你對敵人造成傷害並避開其攻擊。你也可以選擇造成額外+1d6傷害，但將自己暴露在敵人的攻擊之下。<br/>
 	✴擲出7-9時，你對敵人造成傷害，且敵人對你進行攻擊。</p></div>
 
-<div class="Move"><h2 class="BasicMoveName">射擊(Volley)</h2>
+<div class="Move"><h2 class="BasicMoveName">射擊 (Volley)</h2>
 <p class="NoIndent">
 	當你<strong>瞄準並射擊遠方的敵人</strong>時，擲+敏捷。<br/>
 	✴擲出10+時，你成功命中目標－－造成你的傷害。<br/>
@@ -126,7 +126,7 @@
 	<li>你必須妥協：-1d6傷害。</li>
 	<li>你必須射好幾箭，減少 1發彈藥。</li></ul></div>
 
-<div class="Move"><h2 class="BasicMoveName">面對危險(Defy Danger)</h2>
+<div class="Move"><h2 class="BasicMoveName">面對危險 (Defy Danger)</h2>
 <p class="NoIndent">
 	當你<strong>在迫在眉睫的威脅之下採取行動</strong>或<strong>即將遭受災難性的後果</strong>，敘述你要如何處理它並擲骰。如果你……</p>
 <ul>
@@ -140,7 +140,7 @@
 	✴擲出10時，你做出你預計執行的行動，該威脅不會應驗。<br/>
 	✴擲出7-9時，你躊躇、猶豫、或退縮了：GM會給你一個更糟的後果、妥協，或是困難的抉擇。</p></div>
 
-<div class="Move"><h2 class="BasicMoveName">保衛(Defend)</h2>
+<div class="Move"><h2 class="BasicMoveName">保衛 (Defend)</h2>
 <p class="NoIndent">
 	當你<strong>挺身保護一個遭受攻擊的人、物品、或地點</strong>時，擲+體質。<br/>
 	✴擲出10+時，獲得 3掌握。<br/>
@@ -152,14 +152,14 @@
 	<li>使攻擊者露出破綻，讓一名夥伴在對付他時獲得下次+1。</li>
 	<li>對攻擊者造成等同於你等級的傷害。</li></ul></div>
 
-<div class="Move"><h2 class="BasicMoveName">憶述見聞(Spout Lore)</h2>
+<div class="Move"><h2 class="BasicMoveName">憶述見聞 (Spout Lore)</h2>
 <p class="NoIndent">
 	當你<strong>回憶自己積累下來，關於某個事物的知識</strong>時，擲+智力。<br/>
 	✴擲出10+時，GM會就你的情況告訴你一件有趣且有用的情報。<br/>
 	✴擲出7-9時，GM只會告訴你一件有趣的情報－－你必須自己設法讓它派上用場。
 	GM可能會詢問你「你是怎麼知道的？」現在，陳述事實吧。</p></div>
 
-<div class="Move"><h2 class="BasicMoveName">審視現狀(Discern Realities)</h2>
+<div class="Move"><h2 class="BasicMoveName">審視現狀 (Discern Realities)</h2>
 <p class="NoIndent">
 	當你<strong>仔細地研究一個情景或人物</strong>時，擲+睿知：<br/>
 	✴擲出10+時，從下列清單中選擇三個問題詢問GM。<br/>
@@ -173,13 +173,13 @@
 	<li>誰才是掌控這裡的人？</li>
 	<li>這裡有什麼與其表面所見不同？</li></ul></div>
 
-<div class="Move"><h2 class="BasicMoveName">談判(Parley)</h2>
+<div class="Move"><h2 class="BasicMoveName">談判 (Parley)</h2>
 <p class="NoIndent">
 	當你<strong>擁有籌碼以利用GM的角色，且打算操弄他們</strong>時，擲+魅力。這個籌碼必須是他們所需要或想要的事物。<br/>
 	✴擲出10+時，他們會向你要求某件事，且若你先做出承諾，則他們將依你所言行事。<br/>
 	✴擲出7-9時，他們將要求一些關於你承諾的具體保證，現在就要。</p></div>
 
-<div class="Move"><h2 class="BasicMoveName">援助或干擾(Aid or Interfere)</h2>
+<div class="Move"><h2 class="BasicMoveName">援助或干擾 (Aid or Interfere)</h2>
 <p class="NoIndent">
 	當你<strong>幫助或阻撓某人</strong>時，擲+對他們的羈絆。<br/>
 	✴擲出10+時，他們的擲骰獲得+1或-2，由你決定。<br/>
@@ -189,67 +189,105 @@
 <h1>特殊動作</h1>
 <div class="Move"><h2 class="BasicMoveName">臨死一息 (Last Breath)</h2>
 <p class="NoIndent">
-	當你<strong>瀕臨死亡</strong>時，你瞥見了死國黑門後頭的景象（GM將會描述它的樣子）。接著擲骰（單純擲骰，什麼都不加－－是的，死神才不在乎你有多強壯或多厲害）。<br/>
+	當你<strong>瀕臨死亡</strong>時，你瞥見了死亡國度的黑門後頭的景象（GM將會描述它的樣子）。接著擲骰（單純擲骰，什麼都不加－－是的，死神才不在乎你有多強壯或多厲害）。<br/>
 	✴擲出10+時，你死裡逃生－－你的處境仍然糟糕，但你仍然活著。<br/>
 	✴擲出7-9時，死神對你提出一項交易。你要嘛接受並活下來，要嘛拒絕並穿過黑門，迎接你等候已久的命運。<br/>
 	✴擲出6-時，你的命運已經注定。你將成為死神的財產，並很快地離開人世。GM將告訴你那一刻何時來到。</p></div>
 
 <div class="Move"><h2 class="BasicMoveName">負重 (Encumbrance)</h2>
 <p class="NoIndent">
-	當你<strong>進行某個動作時身上攜帶的重量</strong>低於或等於負載上限時，你不會有事。
-	當你進行某個動作時身上攜帶的重量等於負載上限+1或負載上限+2，你的擲骰獲得-1。
-	當你進行某個動作時身上攜帶的重量超過負載上限+2，你必須做出選擇：你必須捨棄至少1 重量的物品並在獲得擲骰-1，或者，你的擲骰自動失敗。</p></div>
+	當你<strong>進行某個動作時身上攜帶的重量</strong>低於或等於負載上限時，你不會有事。<br/>
+	當你進行某個動作時身上攜帶的重量等於負載上限+1或負載上限+2，你的擲骰獲得-1。<br/>
+	當你進行某個動作時身上攜帶的重量超過負載上限+2，你必須做出選擇：你必須捨棄至少 1 重量的物品並獲得擲骰-1，或者，你的擲骰自動失敗。</p></div>
 
 <div class="Move"><h2 class="BasicMoveName">紮營 (Make Camp)</h2>
 <p class="NoIndent">
 	當你<strong>安頓下來休息</strong>時，消耗一份口糧。如果你們正處於某個危險的場所，那麼也請決定守夜的順序。如果你有足夠的經驗值，也可以在這時候升級。當你經歷了好幾個小時不被打擾的睡眠後並悠悠醒轉，恢復等同你最大生命值一半的傷害。</p></div>
 
 <div class="Move"><h2 class="BasicMoveName">守夜 (Take Watch)</h2>
-<p class="NoIndent">When <strong>you’re on watch and something approaches the camp</strong> roll+Wis. On a 10+ you’re able to wake the camp and prepare a response, the camp takes +1 forward. On a 7–9 you react just a moment too late; the camp is awake but hasn’t had time to prepare. You have weapons and armor but little else. On a miss whatever lurks outside the campfire’s light has the drop on you.</p></div>
+<p class="NoIndent">
+	當你<strong>負責守夜而某種東西正在接近營地</strong>時，擲+睿知：<br/>
+	✴擲出10+時，你來得及叫醒營地中的所有人並做好反應的準備。營地中的所有人獲得下次+1。<br/>
+	✴擲出7-9時，你的反應稍微遲了一些；你營地中的同伴醒了，但還沒有時間做好準備。你除了身上的武器和防具之外，別無他物。<br/>
+	✴擲出失敗時，潛伏在營地外的事物將你逮了個正著。</p></div>
 
 <div class="Move"><h2 class="BasicMoveName">踏上危險旅途 (Undertake a Perilous Journey)</h2>
-<p class="NoIndent">When you <strong>travel through hostile territory</strong>, choose one member of the party to act as trailblazer, one to scout ahead, and one to be quartermaster (the same character cannot have two jobs). If you don’t have enough party members or choose not to assign a job, treat that job as if it had rolled a 6. Each character with a job to do rolls+Wis. On a 10+ the quartermaster reduces the number of rations required by one. On a 10+ the trailblazer reduces the amount of time it takes to reach your destination (the GM will say by how much). On a 10+ the scout will spot any trouble quick enough to let you get the drop on it. On a 7–9 each roles performs their job as expected: the normal number of rations are consumed, the journey takes about as long as expected, no one gets the drop on you but you don’t get the drop on them either.</p></div>
+<p class="NoIndent">
+	當你們<strong>旅經危險地域</strong>時，選擇隊伍中的一位成員做為領路人、一位擔當斥候以偵查前路、以及一位擔當軍需官（同個角色不能兼任兩份工作）。若隊伍中的成員數量不足，或你們選擇不去執行某份工作，則將該工作的結果視作骰出了6。每個身負職責的角色都擲+睿知：<br/>
+	✴軍需官擲出10+時，使每位成員在旅途中所需消耗的口糧數量減少 1 份。<br/>
+	✴領路人擲出10+時，你們到達目的地所需花費的時間將會減少（GM會告訴你們減少了多少時間）。<br/>
+	✴斥候　擲出10+時，斥候將即時發現任何可能的麻煩，讓你們得以先發制人。<br/>
+	✴擲出7-9時，每個人各自如預期地履行他們的職責：正常數量的口糧將被消耗；旅程花費的時間一如預期；你們不會被麻煩先發制人，但你們同樣也無法搶佔優勢。</p></div>
 
 <div class="Move"><h2 class="BasicMoveName">升級 (Level Up)</h2>
-<p class="NoIndent">When you <strong>have downtime (hours or days) and XP equal to (or greater than) your current level + 7</strong>, subtract your current level +7 from your XP, increase your level by 1, and choose a new advanced move from your class. If you are the wizard, you also get to add a new spell to your spellbook.</p>
-<p>Choose one of your stats and increase it by 1 (this may change your modifier). Changing your Constitution increases your maximum and current HP. Ability scores can’t go higher than 18.</p></div>
+<p class="NoIndent">
+	當你<strong>有充足的修整時間（數小時或數天）且擁有多於或等於你當前等級+7的經驗值</strong>時，將你的經驗值扣掉等同你當前等級+7的數值，將你的等級提升 1 級，並從你的職業中選擇一個新的進階動作。若你是一名法師，則你也將一個新的法術加到你的法術書中。</p>
+<p>
+	選擇你的其中一個屬性值，並使其提升 1 點（這可能會使相應的調整值發生改變）。若你的體質值被提升，則你的最大生命值和當前生命值也都會跟著增加。屬性值不能夠因此超過 18。</p></div>
 
 <div class="Move"><h2 class="BasicMoveName">聚會結束 (End of Session)</h2>
-<p class="NoIndent">When you <strong>reach the end of a session</strong>, choose one your bonds that you feel is resolved (completely explored, no longer relevant, or otherwise). Ask the player of the character you have the bond with if they agree. If they do, mark XP and write a new bond with whomever you wish.</p>
-<p>Once bonds have been updated look at your alignment. If you fulfilled that alignment at least once this session, mark XP. Then answer these three questions as a group:</p>
-<ul><li>Did we learn something new and important about the world?</li>
-<li>Did we overcome a notable monster or enemy?</li>
-<li>Did we loot a memorable treasure?</li></ul>
-<p>For each “yes” answer everyone marks XP.</p></div>
+<p class="NoIndent">
+	當你們<strong>迎來聚會的結束</strong>時，從你的羈絆中選擇一個你覺得已經被解決的關係（可能是已經被完整探討、不再有關聯、或是其他原因）。詢問與你建立該羈絆的角色的玩家是否同意。若他同意的話，則你標記一點經驗值，並寫下一個與任意對象結下的新羈絆。</p>
+<p>
+	在更新羈絆之後，查看你的陣營。如果你在該次聚會中至少滿足了一次陣營的描述，則你標記一點經驗值。接著，所有人一起回答下列三個問題：</p>
+<ul>
+	<li>我們是否對這個世界有一些嶄新且重要的認識？</li>
+	<li>我們是否戰勝了一個特別的怪物或敵人？</li>
+	<li>我們是否收穫了令人難忘的財寶？</li>
+</ul>
+<p>每一個「是」的回答，都能讓所有人標記一點經驗值。</p></div>
 
 <div class="Move"><h2 class="BasicMoveName">歡宴暢飲 (Carouse)</h2>
-<p class="NoIndent">When you <strong>return triumphant and throw a big party</strong>, spend 100 coin and roll + extra 100s of coin spent. On a 10+ choose 3. On a 7–9 choose 1. On a miss, you still choose one, but things get really out of hand.</p>
-<ul><li>You befriend a useful NPC</li>
-<li>You hear rumors of an opportunity</li>
-<li>You gain useful information</li>
-<li>You are not entangled, ensorcelled, or tricked</li></ul></div>
+<p class="NoIndent">
+	當你們<strong>凱旋而歸並舉辦一場盛大的派對</strong>，花費 100 金幣並擲骰，每額外花費100金幣都可以讓這次擲骰獲得+1。<br/>
+	✴擲出10+時，選擇3項。<br/>
+	✴擲出7-9時，選擇1項。<br/>
+	✴擲出失敗時，你仍然可以選擇1項，但情況將完全失控。</p>
+<ul>
+	<li>你們與一名有用的NPC成為朋友。</li>
+	<li>你們聽到了關於某個機會的謠言。</li>
+	<li>你們得知了一個有用的情報。</li>
+	<li>你們不會被在宴會中被糾纏、受蠱惑、或被欺騙。</li>
+</ul></div>
 
 <div class="Move"><h2 class="BasicMoveName">補給 (Supply)</h2>
-<p class="NoIndent">When you <strong>go to buy something with gold on hand</strong>, if it’s something readily available in the settlement you’re in, you can buy it at market price. If it’s something special, beyond what’s usually available here, or non-mundane, roll+Cha. On a 10+ you find what you’re looking for at a fair price. On a 7–9 you’ll have to pay more or settle for something similar.</p></div>
+<p class="NoIndent">
+	當你<strong>花費手頭上的金幣去購物</strong>時，若該物品是當地現有的貨物，則你可以直接以市價購買它。若它是比較特別的東西、在當地通常無法獲得、或是非凡奇物，擲+魅力：<br/>
+	✴擲出10+時，你以合理的價格找到了你想要的東西。<br/>
+	✴擲出7-9時，你必須支付更多的金錢，或者勉強接受類似的代替品。</p></div>
 
 <div class="Move"><h2 class="BasicMoveName">恢復 (Recover)</h2>
-<p class="NoIndent">When you <strong>do nothing but rest in comfort and safety</strong> after a day of rest you recover all your HP. After three days of rest you remove one debility of your choice. If you’re under the care of a healer (magical or otherwise) you heal a debility for every two days of rest instead.</p></div>
+<p class="NoIndent">
+	當你<strong>什麼都不做而只是在一個安全而舒適的場所休息</strong>。在休息一天之後，你將回復你所有的生命值。在休息三天之後，你可以移除一個你所選擇的異常狀態。如果你處在醫療者的照顧下（無論是透過魔法或其他手段），則你改為每休息兩天就可以從一個異常狀態中恢復。</p></div>
 
 <div class="Move"><h2 class="BasicMoveName">招募 (Recruit)</h2>
-<p class="NoIndent">When you <strong>put out word that you’re looking to hire help</strong>, roll. If you make it known…</p>
-<ul><li>…that your pay is generous, take +1</li>
-<li>…what you’re setting out to do, take +1</li>
-<li>…that they’ll get a share of whatever you find, take +1</li></ul>
-<p class="NoIndent">If you have a useful reputation around these parts take an additional +1. On a 10+ you’ve got your pick of a number of skilled applicants, your choice who you hire, no penalty for not taking them along. On a 7–9 you’ll have to settle for someone close or turn them away. On a miss someone influential and ill-suited declares they’d like to come along (a foolhardy youth, a loose-cannon, or a veiled enemy, for example), bring them and take the consequences or turn them away. If you turn away applicants you take -1 forward to Recruit.</p></div>
+<p class="NoIndent">
+	當你<strong>發布消息說你們正在聘請能幫上忙的人才</strong>時，擲骰。若你表明……</p>
+<ul>
+	<li>……你們願意提供豐厚的報酬，擲骰獲得+1</li>
+	<li>……你們打算做什麼，擲骰獲得+1</li>
+	<li>……他們將能夠共享任何你們所發現的戰利品，擲骰獲得+1</li>
+</ul>
+<p class="NoIndent">
+	若你們在這一帶享有盛譽，則擲骰再額外獲得+1。<br/>
+	✴擲出10+時，你可以從一些技術純熟的應徵者中挑選，決定你們要雇傭誰，且即使不雇傭任何人也不會因此受到懲罰。<br/>
+	✴擲出7-9時，你們不得不雇傭勉強某個差強人意的應徵者，或將他們全部拒之門外。<br/>
+	✴擲出失敗時，某個具有影響力但相當不適任的人物表示他們願意跟隨你們（也許他是一位有勇無謀的年輕人、我行我素的麻煩鬼、或敵人的偽裝），你們決定要帶上他們並承擔相應後果，或是將他們拒之門外。若你們將應徵者拒之門外，則你們下次進行招募動作時將獲得-1。</p></div>
 
-<div class="Move"><h2 class="BasicMoveName">懸賞令 (Outstanding Warrants)</h2>
-<p class="NoIndent">When you <strong>return to a civilized place in which you’ve caused trouble before</strong>, roll+Cha. On a hit, word has spread of your deeds and everyone recognizes you. On a 7–9, that, and, the GM chooses a complication:</p>
-<ul><li>The local constabulary has a warrant out for your arrest</li>
-<li>Someone has put a price on your head</li>
-<li>Someone important to you has been put in a bad spot as a result of your actions</li></ul></div>
+<div class="Move"><h2 class="BasicMoveName">惡名昭彰 (Outstanding Warrants)</h2>
+<p class="NoIndent">
+	當你<strong>回到了某個你曾經惹出麻煩的文明場所</strong>，擲+魅力：<br/>
+	✴擲出成功時，你的所作所為傳遍大街小巷，且每個人都認得你。<br/>
+	✴擲出7-9時，除此之外，GM再為你選擇一項困境：</p>
+<ul>
+	<li>當地的執法單位已經發布了追捕你的通緝令。</li>
+	<li>某個人開價懸賞你的腦袋。</li>
+	<li>某個對你很重要的人因為你過去的行動而陷入糟糕的處境。</li>
+</ul></div>
 
 <div class="Move"><h2 class="BasicMoveName">未雨綢繆 (Bolster)</h2>
-<p class="NoIndent">When you <strong>spend your leisure time in study, meditation, or hard practice,</strong> you gain preparation. If you prepare for a week or two, 1 preparation. If you prepare for a month or longer, 3 preparation. When your preparation pays off spend 1 preparation for +1 to any roll. You can only spend one preparation per roll.</p></div>
+<p class="NoIndent">
+	當你<strong>把你的閒暇時間用在研究、冥想、或苦練中</strong>，你將做好預備以面對未來的情境。如果你花了一個禮拜以上的時間預備，則你獲得 1個準備。如果你預備了一個月或更久的時間，則你獲得 3個準備。當你所做的預備能派上用場時，消耗 1個準備以在任何擲骰上獲得+1。你在每次擲骰中只能消耗一個準備。</p></div>
 
           </div>
        </div>
