--- a/example/index.html
+++ b/example/index.html
@@ -68,7 +68,7 @@
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/first_session">第一次聚會</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/fronts">前置</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/the_world">世界</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/advanced_delving">進階</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/advanced_delving">深入鑽研</a></li>
      </ul>
    </li>
    <li class="dropdown">
@@ -113,24 +113,24 @@
 <h1>遊玩範例</h1>
 <p class="NoIndent">
 	我正在主持一場遊戲，我的玩家有艾薩克（扮演歐瑪爾(Omar)）、班（扮演布莉安娜(Brianne)）、艾米（扮演諾拉(Nora)）、和丹（扮演拉瑟(Rath)）。團隊們來到了一個哥布林部落，這些哥布林們正在準備進行儀式，獻祭一條罕見而珍貴的白化鱷魚（在這座城市的富人中被當作寵物）。</p>
-<p>三名哥布林戰士──吸食了致幻氣體──向著身為戰士的布莉安娜發起衝鋒，尖聲怪叫著。另外兩名則躲到掩體後，備好牠們的弓箭，並急切地向拉瑟比出手勢以抵禦他配戴的邪眼。另外一群三人小隊潛進了房間外緣的陰影之中，準備發起偷襲。哥布林大祭司和她的助手仍繼續進行著儀式，揉著鱷魚翻出的肚皮來讓牠保持順從，並拿出祭祀刀準備割開牠的喉嚨。</p>
+<p>三名哥布林戰士──吸食了致幻氣體──尖聲怪叫的朝著布莉安娜發起衝鋒。另外兩名則躲到掩體後，備好牠們的弓箭，並急切地向拉瑟比出手勢以抵禦他配戴的邪眼。還有一群三人小隊潛進了房間外緣的陰影之中，準備偷襲。哥布林大祭司和她的助手仍繼續進行著儀式，揉著鱷魚翻出的肚皮來讓牠保持順從，並拿出祭祀刀準備割開牠的喉嚨。</p>
 <p>當我描述完整個情境後，我給他們一個展開行動的機會，以確保遊戲是透過對話進行：「那麼，你們打算做什麼？」</p>
 <p>艾薩克最先展開了行動：「這個房間的外緣有足夠我躲藏的陰影嗎？」「有的。」我說：「很顯然，哥布林們並不怎麼喜歡光線。這個房間的外緣區域消失在了黑暗中，只有搖搖欲墜的牆壁和滿地碎石隱約可見。」「太好了！我要到那邊去，往那些鬼鬼祟祟的傢伙去的那邊。歐瑪爾回頭看了一眼，戴上兜帽，並遁入了陰影之中。我打算待會從這裡的陰影……照亮著儀式祭壇的火炬這邊跳出來。」</p>
-<p>我看了看地圖，然後說：「嗯，我想你顯然會需要<b>面對</b>被發現的<b>危險</b>。在我看來這應該會使用到敏捷，畢竟你需要謹慎且安靜的移動。」於是他拿起了骰子並擲骰。骰子擲出了 1 跟 2，加上他的敏捷加值為2，總共只有 5。「該死！」他抱怨道。</p>
+<p>我看了看地圖，然後說：「嗯，我想你顯然會需要<b>面對</b>被發現的<b>危險</b>。在我看來這應該會使用到敏捷，畢竟你需要謹慎且安靜的移動。」於是他拿起了骰子並擲骰。骰子擲出了 1 跟 2，加上他的敏捷加值為 2，總共只有 5。「該死！」他抱怨道。</p>
 <p>我對於該怎麼做已經有了一些想法，但我還是對照了我的動作清單做確認。果然，我打算讓他的腳卡進碎石堆中的主意符合其中一個動作，也就是<b>讓某人陷入窘境</b>。於是我說道：「隨著你在陰影中前進，你的腳踩上了碎石堆，碎石鬆動，反過來壓住了你的腳，你動彈不得。更糟的是，這些滾動的碎石喚醒了陰影中的某個存在，你聽到了一聲深沉沙啞的呼吸聲。你會想大喊求助但暴露自己的位置，還是嘗試自己掙脫？」</p>
 <p>「呃……我不確定。」</p>
 <p>「沒關係，我們晚點再來問你。其他人，你們打算做什麼？」</p>
-<p>丹起身。「那些哥布林躲進了陰影對吧？我能看見牠們嗎？」「乍看之下無法，你想把牠們找出來嗎？」「沒，我只是想知道牠們能不能做為我睡眠術的目標。我驅動魔法之風，將其化作一道在整個房間內吹拂的沉靜夏日微風。」</p>
+<p>丹起身。「那些哥布林躲進了陰影對吧？我能看見牠們嗎？」「乍看之下無法，你想把牠們找出來嗎？」「沒，我只是想知道牠們能不能做為我睡眠術的目標。我要驅動魔法之風，將其化作一道在整個房間內吹拂的沉靜夏日微風。」</p>
 <p>丹為他的<b>施放法術</b>動作擲骰以施放睡眠術。他的兩顆骰子總和為 6，加上他的+2 智力，總共為 8。他必須做出選擇。「你能夠感覺到法術從你手中釋放出去，這道魔法之風籠罩了哥布林的獻祭儀式。這個動作提供了一些選項，你打算選擇哪一個來維持這個法術？」</p>
-<p>丹思考著他的選項。「我可能會需要讓更多的傢伙陷入沉睡。布莉安娜，妳能夠在我遇到麻煩時掩護我嗎？還是我應該選擇下次-1？」</p>
+<p>丹思考著他的選項。「我之後可能會需要讓更多的傢伙陷入沉睡。布莉安娜，妳能夠在我遇到麻煩時掩護我嗎？還是我應該選擇下次-1？」</p>
 <p>「當然，我可以掩護你。」班說道。</p>
 <p>「OK，那我要選擇遭遇危險的選項。」</p>
-<p>「好極了。」我說道：「那些哥布林戰士吸食了致幻氣體對吧？藥效調諧了牠們的感官：他們能夠微微感覺到那股魔法之風，而牠們現在全都衝向了你，而不是布莉安娜。你讓多少生物陷入了睡眠呢？」</p>
+<p>「好極了。」我說道：「那些哥布林戰士吸食了致幻氣體對吧？藥效調諧了牠們的感官：他們能夠微微感覺到那股魔法之風的存在，因此牠們現在全都衝向了你，而不是布莉安娜。你讓多少生物陷入了睡眠呢？」</p>
 <p>丹擲骰。「看起來只有一隻，該死。」</p>
-<p>「就在哥布林們長時間的祈禱途中，大祭司因為你的魔法而倒在了地上。她的助手立刻開始搖晃她，將她叫醒。牠們都把注意力從白化鱷魚身上移開，而因為沒有人在揉摸牠的肚皮，白化鱷魚也不再滿足。不過在此同時，那些煙霧繚繞的哥布林們，牠們正氣勢洶洶的向著拉瑟而來。」</p>
+<p>「在哥布林們長時間的祈禱途中，大祭司因為你的魔法而倒在了地上。她的助手立刻開始搖晃她，將她叫醒。牠們都把注意力從白化鱷魚身上移開，而因為沒有人在揉摸牠的肚皮，白化鱷魚也不再滿足。不過在此同時，那些煙霧繚繞的哥布林戰士們，牠們正氣勢洶洶的向著拉瑟而來。」</p>
 <p>班加入了進來。「我佔到拉瑟和那群瘋狂哥布林們之間，讓自己成為一個顯眼的大目標，用一聲大喊吸引哥布林們的注意。」</p>
 <p>「這聽起來像是個<b>保衛</b>動作。」我說道。</p>
-<p>「沒問題，我骰出了7，所以我獲得 1 掌握。」</p>
+<p>「沒問題，我骰出了 7，所以我獲得 1 掌握。」</p>
 <p>「很好。這三隻冒煙的哥布林朝著拉瑟猛衝過去，瘋狂地揮舞著牠們的匕首。」</p>
 <p>「不，牠們別想！」班說道：「我花費我的掌握，擋在牠們面前，並讓攻擊全部轉移到我身上。」</p>
 <p>「所以布莉安娜在最後一刻挺身介入，把拉瑟推開，改為讓哥布林撲到她身上。這看起來是 5 點傷害。諾拉，布莉安娜把這三個精神錯亂的哥布林控制在她身邊，拉瑟才剛讓女祭司陷入沉睡，鱷魚開始躁動，歐瑪爾則不見蹤影……你打算做什麼？」</p>
@@ -138,7 +138,7 @@
 <p>在回答之前，我檢查了一下遊俠的<b>命令</b>動作，確保我明白坎托的搜尋會有什麼效果。「好吧，坎托大概很快就能自己找到歐瑪爾。如果妳跟牠一起潛進黑暗中，那妳為了找尋歐瑪爾所進行的<b>審視現狀</b>的擲骰將會得到牠給妳的加值。不過，聽起來妳打算先進行<b>瞄準射擊</b>？」</p>
 <p>「噢，哥布林弓箭手算被我偷襲嗎？我以為這只會是個<b>射擊</b>動作。」艾米答道。</p>
 <p>是時候換我做出決定了。「不，牠們把注意力完全放到了拉瑟身上，牠們馬上就要射出箭矢。我認為妳的行動符合偷襲的條件，因為牠們實在太專注了。」</p>
-<p>「太棒了！那我繼續，並射向離我最近的哥布林的手臂，我要讓牠失手落下牠的弓。這好像是+敏捷……10！牠放開了牠的弓並受到 4 點傷害。」</p>
+<p>「太棒了！那我繼續，並射向離我最近的哥布林的手臂，我要讓牠失手落下牠的弓。這應該是+敏捷……10！牠放開了牠的弓並受到 4 點傷害。」</p>
 <p>我先確認了一下哥布林的數據，接著回答：「是的，這一箭會殺死牠。而且因為妳射穿了牠的手臂，所以牠完全沒機會射擊。然而，另一名弓箭手還是朝著拉瑟射出飛箭，造成 2 點傷害。拉瑟，布莉安娜將你推到了一旁，你本來以為自己安全了，但在那一剎那，一支箭射中了你的腿，你打算怎麼辦？……事實上，先等一下，我們來看看歐瑪爾做了什麼。」</p>
 <p>艾薩克現在已經把事情好好想清楚了。「那個深沉沙啞的呼吸聲，我可以分辨出它是從哪裡傳來的嗎？它是像人類體型會發出的刺耳聲音、還是怪物尺寸的刺耳聲音？」</p>
 <p>「聽起來你打算試著藉由仔細傾聽來獲得一些情報，是吧？」我希望這麼說能提醒艾薩克有個動作能做到這件事，而不是直接要他進行動作。</p>
