--- a/moves_discussion/index.html
+++ b/moves_discussion/index.html
@@ -145,7 +145,7 @@
 <p class="ExampleDialogueLastLine">GM: 那名獸人癱倒在血泊中！第二個獸人愣了一下，並隨即對你咧齒邪笑，露出一口可怕的獠牙的同時抽出腰間的號角！你打算做什麼？</p>
 </div>
 <div class="Example">
-<p class="ExampleDialogueFirstLine">GM: 巴特比，你擊敗了偉大的芬巴，這片大地上最強大的鬥士，你完全解除了他的武裝，並用劍指著他。</p>
+<p class="ExampleDialogueFirstLine">GM: 巴特比，你擊敗了偉大的芬巴，這片大地上最強大的鬥士，你完全解除了他的武裝並用劍指著他。</p>
 <p class="ExampleDialogue">巴特比: 我不會再讓你背叛我了，芬巴！我要解決他。</p>
 <p class="ExampleDialogue">GM: 嗯，好的，這是個<b>劈砍</b>動作，擲+力量。</p>
 <p class="ExampleDialogue">巴特比: 既然你這麼說了……我骰出7。</p>
@@ -356,7 +356,8 @@
 
 
 <h1>特殊動作</h1>
-<p class="NoIndent">Special moves are moves that come up less often or in more specific situations. They’re still the basis of what characters do in Dungeon World—particularly what they do between dungeon crawls and high-flying adventures.</p>
+<p class="NoIndent">
+	特殊動作是那些不常發生、或只會在更加特定的場合下觸發的動作。它們仍然是地城世界的角色們行動的基礎──尤其是那些他們在地城探索和壯志冒險之間時會做出的行動。</p>
 <hr/>
 
 
@@ -367,13 +368,15 @@
 	✴擲出10+時，你死裡逃生－－你的處境仍然糟糕，但你仍然活著。<br/>
 	✴擲出7-9時，死神對你提出一項交易。你要嘛接受並活下來，要嘛拒絕並穿過黑門，迎接你等候已久的命運。<br/>
 	✴擲出6-時，你的命運已經注定。你將成為死神的財產，並很快地離開人世。GM將告訴你那一刻何時來到。</p></div>
-<p class="NoIndent">The Last Breath is that moment standing between life and death. Time stands still as Death appears to claim the living for his own. Even those who do not pass beyond the Black Gates catch a glimpse of the other side and what might await them—friends and enemies past, rewards or punishment for acts in life or other, stranger vistas. All are changed in some way by this moment—even those who escape.</p>
-<p>There are three outcomes to this move. On a 10+, the Character has cheated Death in some meaningful way. He’s escaped with something that, by rights, isn’t his anymore. Death is powerless to stop this, but he remembers this slight. On a 7–9, the GM should offer a real choice with significant consequence. Think about the behaviors of the character and the things you’ve learned about him in play. Death knows and sees all and tailors his bargains accordingly. This is a trade, remember. Offer something that will be a challenge to play out but will lead the game in fun new direction. On a miss, death is inevitable. The most obvious approach is to say “Death takes you across the threshold, into his bleak kingdom.” and move on. However, sometimes Death comes slowly. You might say “you have a week to live” or “you can feel the cold hand of Death on you…” and leave it at that, for now. The player may want to give in and accept death at this point—that’s okay. Let them create a new character as normal. The key thing to remember is that a brush with death, succeed or fail, is a significant moment that should always lead to change.</p>
+<p class="NoIndent">
+	臨死一息這個動作代表著你身處生死交界瞬間的時刻：時間凍結，死神降臨，並宣告生命為其所有。就連那些尚未穿越漆黑門扉的人們，也都能瞥見在另一側等候著他們的種種──逝去的摯友仇敵、生前事蹟的回報或懲罰、或者座落在死亡國度中的其他古怪景象。在這一刻，一切都將改變──即使對那些僥倖逃過一劫的人來說也是一樣。</p>
+<p>
+	這個動作將帶來三種結果。擲出10+時，角色將以某種有意義的方式騙過死神。他僥倖逃過了某個本應降臨在他身上的命運。死神無法阻止這件事發生，但祂會永遠記得這一刻。擲出7-9時，GM會提供一個將帶來重大後果的沉重抉擇。回想這名角色在遊戲中的行為表現和你對他的瞭解。死神知曉，且見證這一切，並會根據這一切為角色提供一筆量身打造的交易。記住，這是一筆關乎生命的交易，它將帶來一個具有挑戰性，但讓遊戲朝著更有趣的方向發展的後果。但倘若擲骰失敗，則死亡終將無可避免。最顯而易見的處理方式會是「死神帶著你穿過了死門，進入祂荒涼的死亡國度。」並繼續進行遊戲。然而，在某些時候，死神降臨的步調並沒有那麼迅速。你可以說「你還有一個禮拜能活」或「你能感覺到死神冰冷的手掌按在身上……」並在當下先就這麼算了。玩家可能會想要放棄並接收死亡的命運──這也沒關係。讓他們如常創造新的角色就好。重要的是要記住，當你與死神擦身而過，無論成功倖存或失敗慘死，這都將是一個重要的時刻，且總是會帶來改變。</p>
 <div class="Example">
-<p class="ExampleDialogueFirstLine">GM: Sparrow, as the knife blade disappears into your guts, the world fades away and you stand before the Black Gates of Death. Among the throngs of suffering souls, you spot Lord Hwyn, that sickly cur. It looks like all his ill deals caught up with him at last. He spots you across the bleak gulf and you feel the chill of his hunger in your very soul. Take your Last Breath.</p>
-<p class="ExampleDialogue">Sparrow: Heavy. I got a 9.</p>
-<p class="ExampleDialogue">GM: Death appears to you, wisps of black cloth dancing around his shadowy form. A pale hand touches your face. You hear his voice in your mind. “Come to me so soon, pretty Sparrow? You follow a river of souls, sent here by your blade. I do so love you for them. I’ll return you to the world, but you must make me a promise. In shadow you dwell, so shadow you shall become. Shun the light of day forever or find a quick trip back to my company. What do you say, little thief?”</p>
-<p class="ExampleDialogue">Sparrow: (gulp)</p>
+<p class="ExampleDialogueFirstLine">GM: 雀兒，隨著刀刃沒入妳的內臟，整個世界也逐漸消散，妳發現自己站在死神的漆黑門扉前。在無數受苦折磨的靈魂之中，妳看見了溫恩領主，那個病態的混蛋，看起來他最終還是為他幹下的那些骯髒事付出了代價。他的視線穿過了廣袤的荒涼裂谷，看見了妳，妳感覺他飢渴的寒意滲入了妳的靈魂。進行妳的臨死一息檢定吧。</p>
+<p class="ExampleDialogue">雀兒: 真沉重……我骰出了9。</p>
+<p class="ExampleDialogue">GM: 死神出現在妳面前，縷縷黑衣飛舞環繞在祂陰影般的身軀周遭。祂蒼白的手撫上妳的臉龐，妳聽到祂的聲音在你心中響起：「這麼快就來見我了，漂亮的小雀兒？妳來了，跟著那些妳用刀刃葬送的靈魂一起……我確實因此挺喜歡妳的。我可以將妳送回原本的世界，但妳必須向我承諾：妳棲居陰影，因此妳也將身成黑影。妳要永世躲避白晝之光，否則妳很快就會回到我的國度。妳怎麼說呢，小賊？」</p>
+<p class="ExampleDialogue">雀兒: (倒抽一口氣)</p>
 </div>
 <hr/>
 
@@ -387,8 +390,10 @@
 		<li>低於或等於你的負載上限+2，你的擲骰獲得持續-1，直到你減輕你的負重。</li>
 		<li>超過你的負載上限+2，你必須做出選擇：你必須捨棄至少 1 重量的物品並在擲骰獲得-1，或者，你的擲骰自動失敗。</li>
 	</ul></div>
-<p class="NoIndent">A PC’s load stat is determined by their class and Str. Being able to haul more is a clear benefit when trying to carry treasure out of a dungeon or just making sure you can bring along what you need.</p>
-<p>This move only applies to things a person could walk around with and still act. Carrying a boulder on your back is not encumbrance—you can’t really act or move much with it. It affects what moves you can make appropriately in the fiction.</p>
+<p class="NoIndent">
+	PC的負載量是根據其職業與力量調整值來決定的。無論你是打算把深藏在地城中的財寶帶出來、或是確保你能夠攜帶你所需要的行李，能夠背負的東西顯然越多越好。</p>
+<p>
+	這個動作只適用在角色仍能四處走動並採取行動的情況。將一塊大石頭背在你背上並不會觸發這個動作──你在背負巨石的時候實在沒辦法怎麼移動或採取行動。這個動作會影響你在敘事中所能合適地做出哪些動作。</p>
 <hr/>
 
 
