--- a/character_creation/index.html
+++ b/character_creation/index.html
@@ -113,32 +113,42 @@
 <p class="NoIndent">Making Dungeon World characters is quick and easy. You should all create your first characters together at the beginning of your first session. Character creation is, just like play, a kind of conversation—everyone should be there for it.</p>
 <p>You may need to make another character during play, if yours gets killed for example. If so, no worries, the character creation process helps you make a new character that fits into the group in just a few minutes. All characters, even replacement characters, start at first level.</p>
 <p>Most everything you need to create a character you’ll find on the character sheets. These steps will walk you through filling out a character sheet.</p>
+
 <h2>1. 選擇職業 (Choose a Class)</h2>
-<p class="NoIndent">Look over the character classes and choose one that interests you. To start with everyone chooses a different class; there aren’t two wizards. If two people want the same class, talk it over like adults and compromise.</p>
-<p class="Example">I sit down with Paul and Shannon to play a game run by John. I’ve got some cool ideas for a wizard, so I mention that would be my first choice. No one else was thinking of playing one, so I take the wizard character sheet.</p>
+<p>
+  查看所有的角色職業，並從中選擇一個你感興趣的職業。讓每個玩家選擇不同的職業；一場遊戲中可不能同時出現兩名法師。如果有兩個玩家想要選擇同一個的職業，請他們像成熟大人一樣好好討論並協商。</p>
+<p class="Example">
+  我和保羅以及夏農坐在一起，準備遊玩約翰所主持的遊戲。我腦中有一些關於法師的好點子，所以我表示這個職業會是我的第一選擇。沒有其他人想扮演法師，所以我直接拿走法師的角色卡。</p>
+
 <h2>2. 選擇種族 (Choose a Race)</h2>
-<p class="NoIndent">Some classes have race options. Choose one. Your race gives you a special move.</p>
-<p class="Example">I like the idea of being flexible—having more spells available is always good, right? I choose Human, since it’ll allow me to pick a cleric spell and cast it like it was a wizard one. That’ll leave Shannon’s cleric free to keep the healing magic flowing.</p>
+<p>有些職業會提供種族的選項。從中選擇一個。你的種族將給你一個特殊動作。</p>
+<p class="Example">
+  我喜歡更靈活一些──能有更多的法術總是好的，對吧？所以我選擇人類，它可以讓我選擇一個牧師法術，並把它當作法師法術來施展。這麼一來夏農的牧師就可以放手施放那些治療法術了。</p>
+
 <h2>3. 選擇角色名稱 (Choose a Name)</h2>
-<p class="NoIndent">Choose your character’s name from the list.</p>
-<p class="Example">Avon sounds good.</p>
+<p>從列表中選擇角色的名稱。</p>
+<p class="Example">亞文聽起來不錯。</p>
+
 <h2>4. 選擇外觀 (Choose Look)</h2>
-<p class="NoIndent">Your look is your physical appearance. Choose one item from each list.</p>
-<p class="Example">Haunted eyes sound good since every wizard has seen some things no mortal was meant to. No good wizard has time for hair styling so wild hair it is. My robes are strange, and I mention to everyone that I think maybe they came from Beyond as part of a summoning ritual. No time to eat with all that studying and research: thin body.</p>
+<p>
+  外觀代表著你身體的外貌特徵，從每個列表中各自選擇一項。</p>
+<p class="Example">
+  「著魔的眼神」聽起來不錯，因為每個法師都曾見識過那些凡人不應見的事物。沒有任何一個稱職的好法師會有時間整理頭髮，所以他會有一頭「雜亂的頭髮」。我的長袍非常「古怪」，我跟大家提到，我認為這件長袍或許是作為召喚儀式的一環從遙遠異界中被召喚出來的。因為埋首研究閱讀而沒有時間吃飯，所以我的角色有著「消瘦的身體」。</p>
+
 <h2>5. 選擇屬性值 (Choose Stats)</h2>
-<p class="NoIndent">Assign these scores to your stats: 16, 15, 13, 12, 9, 8. Start by looking over the basic moves and the starting moves for your class. Pick out the move that interests you the most: something you’ll be doing a lot, or something that you excel at. Put a 16 in the stat for that move. Look over the list again and pick out the next most important move to your character, maybe something that supports your first choice. Put your 15 in the stat for that move. Repeat this process for your remaining scores: 13, 12, 9, 8.</p>
-<p class="Example">It looks like I need Intelligence to cast spells, which are my thing, so my 16 goes there. The defy danger option for Dexterity looks like something I might be doing to dive out of the way of a spell, so that gets my 15. A 13 Wisdom will help me notice important details (and maybe keep my sanity, based on the defy danger move). Charisma might be useful in dealing with summoned creatures so I’ll put my 12 there. Living is always nice, so I put my 9 in Constitution for some extra HP. Strength gets the 8.</p>
+<p>
+  將以下數值分配到你的六個屬性中：16, 15, 13, 12, 9, 8。首先查看所有的基本動作和你職業的起始動作。從中選擇一個你最感興趣的動作：某個你將最常去做，或者最擅長的事情。將 16 分配到該動作所使用的屬性上。再查看一次動作列表，選擇次一個對你的角色而言最重要的動作（也許是某個輔助你第一個選擇的行動）。將你的 15 分配到該動作所使用的屬性上。重複這個過程，直到你將所有剩下的數值分配完畢。</p>
+<p class="Example">
+  看起來我會需要智力屬性來<b>施放法術</b>，而這正是我的首選，因此我把 16 分配給智力。<b>面對危險</b>中跟敏捷有關的選項看起來很像是我在閃躲法術時會去做的事情，因此我把 15 分配給敏捷。13 點的睿知可以幫助我注意到重要的細節（且根據<b>面對危險</b>動作的效果，它或許還能幫助我保持理智）。魅力可能會在我與召喚生物打交道時派上用場，因此我把 12 分配給它。活下來永遠是件好事，因此我把9分配給體質以獲得一些額外的生命值。最後，我把 8 分配給力量屬性。</p>
+
 <h2>6. 算出調整值 (Figure Out Modifiers)</h2>
-<p class="NoIndent">Next you need to figure out the modifiers for your stats. The modifiers are what you use when a move says +DEX or +CHA. If you’re using the standard character sheets the modifiers are already listed with each score.</p>
+<p>
+  接下來你需要算出每個屬性的調整值。當某個動作寫著+敏捷 或+魅力 時，所使用的正是該屬性對應的調整值。如果你使用的是標準角色紙，則調整值就已經列在各數值旁邊。</p>
 <table class="table">
    <tbody>
       <tr>
-        <th>
-          數值
-        </th>
-        <th>
-          調整值
-        </th>
+        <th>數值</th>
+        <th>調整值</th>
       </tr>
       <tr>
         <td>
@@ -199,25 +209,36 @@
     </tbody>
  </table>
 <h2>7. 決定最大生命值 (Set Maximum HP)</h2>
-<p class="NoIndent">Your maximum HP is equal to your class’s base HP+Constitution score. You start with your maximum HP.</p>
-<p class="Example">Base 4 plus 9 con gives me a whopping 13 HP. </p>
+<p>
+  你的最大生命值等於你職業的基礎生命值 + 體質值。你的起始生命值等同你的最大生命值。</p>
+<p class="Example">基礎的 4 點加上 9 點的體質值，給了我總共 13 點生命值。</p>
+
 <h2>8. 選擇起始動作 (Choose Starting Moves)</h2>
-<p class="NoIndent">The front side of each character sheet lists the starting moves. Some classes, like the fighter, have choices to make as part of one of their moves. Make these choices now. The wizard will need to choose spells for their spellbook. Both the cleric and the wizard will need to choose which spells they have prepared to start with.</p>
-<p class="Example">A <em>Summoning</em> spell is an easy choice, so I take Contact Spirits. Magic Missile will allow me to deal more damage than the pitiful d4 for the wizard class, so that’s in too. I choose Alarm for my last spell, since I can think of some interesting uses for it.</p>
+<p>
+  每個職業的角色卡正面都會列出它們各自的起始動作。有些職業，比如說戰士，所擁有的某些起始動作會需要玩家進行一些選擇，請在這個時候做好決定。法師會需要選擇法術來記入他的法術書中。牧師和法師也都需要事先選擇他們在遊戲開始時已經準備好的法術。</p>
+<p class="Example">
+  <em>召喚系</em>的法術是個必然的選擇，因此我選了<b>接觸靈體(Contact Spirits)</b>法術。相比法師職業原本那可悲的 d4傷害骰，<b>魔法飛彈(Magic Missile)</b>能讓我造成更多的傷害，所以我也選了這個法術。我選擇<b>警報術(Alarm)</b>作為我最後的法術，因為我已經想到了一些關於這麼法術的有趣用法。</p>
+
 <h2>9. 選擇陣營 (Choose Alignment)</h2>
-<p class="NoIndent">Your alignment is a few words that describe your character’s moral outlook. Each class may only start with certain alignments. Choose your alignment—in play, it’ll give your character certain actions that can earn you additional XP</p>
-<p class="Example">The Neutral option for wizards says I earn extra XP when I discover a magical mystery. Avon is all about discovering mystery—I’ll go with Neutral.</p>
+<p>
+  你的陣營是一段描述著你角色道德觀的簡短字句。每個職業只能從某些特定陣營中選擇。從中選擇你的陣營──這能讓你的角色在遊戲中做出特定行動時，讓你獲得額外的經驗值。</p>
+<p class="Example">
+  法師中立陣營的選項中寫說，當我發掘一個魔法奧秘時我能夠獲得額外的經驗值。亞文終其一生都在挖掘神秘──所以我選擇了中立陣營。</p>
+
 <h2>10. 選擇裝備 (Choose Gear)</h2>
 <p class="NoIndent">Each class has choices to make for starting gear. Keep your load in mind—it limits how much you can easily carry. Make sure to total up your armor and note it on your character sheet.</p>
 <p class="Example">I’m worried about my HP, so I take armor over books. A dagger sounds about right for rituals; I choose that over a staff. It’s a toss-up between the healing potion and the antitoxin, but healing wins out. I also end up with some rations.</p>
+
 <h2>11. 介紹你的角色 (Introduce Your Character)</h2>
 <p class="NoIndent">Now that you know who your character is, it’s time to introduce them to everyone else. Wait until everyone’s finished choosing their name. Then go around the table; when it’s your turn, share your look, class and anything else pertinent about your character. You can share your alignment now or keep it a secret if you prefer.</p>
 <p>This is also the time for the GM to ask questions. The GM’s questions should help establish the relationships between characters (“What do you think about that?”) and draw the group into the adventure (“Does that mean you’ve met Grundloch before?”). The GM should listen to everything in the description and ask about anything that stands out. Establish where they’re from, who they are, how they came together, or anything else that seems relevant or interesting.</p>
 <p class="Example">“This is Avon, mighty wizard! He’s a human with haunted eyes, wild hair, strange robes, and a thin body. Like I mentioned before his robes are strange because they’re literally not of this world: they came to him as part of a summoning ritual.”</p>
+
 <h2>12. 選擇羈絆 (Choose Bonds)</h2>
 <p class="NoIndent">Once everyone has described their characters you can choose your bonds. You must fill in one bond but it’s in your best interest to fill in more. For each blank fill in the name of one character. You can use the same character for more than one statement.</p>
 <p>Take some time to discuss the bonds and let the GM ask questions about them as they come up. You’ll want to go back and forth and make sure everyone is happy and comfortable with how the bonds have come out. Leave space to discover what each one might mean in play, too: don’t pre-determine everything at the start. Once everyone’s filled in their bonds read them out to the group. When a move has you roll+Bond you’ll count the number of bonds you have with the character in question and add that to the roll.</p>
 <p class="Example">With everyone introduced I choose which character to list in each bond, I have Paul’s fighter Gregor and Shannon’s cleric Brinton to choose from. The bond about prophecy sounds fun, so I choose Gregor for it and end up with “Gregor will play an important role in the events to come. I have foreseen it!” It seems like the wizard who contacts Things From Beyond and the cleric might not see eye to eye, so I add Shannon’s character and get “Brinton is woefully misinformed about the world; I will teach them all that I can.” I leave my last bond blank; I’ll deal with it later. Once everyone is done I read my bonds aloud and we all discuss what this means about why we’re together and where we’re going.</p>
+
 <h2>13. Get Ready to Play</h2>
 <p class="NoIndent">Take a little break: grab a drink, stretch your legs and let the GM brainstorm for a little bit about what they’ve learned about your characters. Once you’re all ready, grab your dice and your sheet and get ready to take on the dungeon.</p>
 <p>Once you’re ready the GM will get things started as described in the First Session chapter.</p>
